--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "parcel": "^2.14.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/postcss": "^4.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "tailwindcss": "^4.1.4"
   }
